Add working directory support to genpatch